# coderhelm-platform

./: .dockerignore  .env.example  .gitignore  PR_FEEDBACK_LEARNING.md  README.md  SETUP.md  UPGRADE_PLAN.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
coderhelm-jira/: .env.example  manifest.yml  package-lock.json
coderhelm-jira/resources/admin/: index.html  package.json
coderhelm-jira/resources/admin/src/: index.jsx
coderhelm-jira/src/: admin.js  index.js
d3ftly-jira/: manifest.yml  package-lock.json  package.json
d3ftly-jira/resources/admin/: index.html  package-lock.json
d3ftly-jira/resources/admin/src/: index.jsx
d3ftly-jira/src/: admin.js  index.js
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/analytics/: page.tsx
dashboard/src/app/billing/: page.tsx
dashboard/src/app/infrastructure/: page.tsx
dashboard/src/app/plans/: page.tsx
dashboard/src/app/plans/[planId]/: plan-detail.tsx
dashboard/src/app/plans/detail/: page.tsx
dashboard/src/app/plans/new/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/settings/guardrails/: page.tsx
dashboard/src/app/settings/instructions/: page.tsx
dashboard/src/app/settings/repos/: page.tsx
dashboard/src/app/settings/voice/: page.tsx
dashboard/src/components/: client-shell.tsx  google-analytics.tsx  mermaid-diagram.tsx  skeleton.tsx  toast.tsx
dashboard/src/lib/: api.ts
docs/: jira-integration.md  pricing-changes.md  tenant-to-team-migration.md
infra/: cdk.context.json  cdk.json  package-lock.json  package.json
infra/cfn/: coderhelm-log-reader.yaml
infra/error-pages/: 403.html  404.html  500.html  502.html  503.html
infra/lib/: api-stack.ts  billing-stack.ts  database-stack.ts  email-stack.ts  frontend-stack.ts  log-analyzer-stack.ts  monitoring-stack.ts  storage-stack.ts  streaming-stack.ts  waf-stack.ts  worker-stack.ts
lambda/custom-message/: handler.js
lambda/log-analyzer/: handler.py
lambda/mcp-proxy/: handler.mjs  package-lock.json  package.json
lambda/stuck-run-cleanup/: handler.py
openspec/specs/gh-13/: design.md  proposal.md  spec.md  tasks.md
scripts/: cleanup-duplicate-users.py  migrate-tables.py  setup-stripe.sh
services/: Cargo.toml  rust-toolchain.toml
services/common/: Cargo.toml
services/common/src/: lib.rs  memlock.rs
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: main.rs  models.rs
services/gateway/src/auth/: github_app.rs  jwt.rs  mod.rs  verify.rs
services/gateway/src/middleware/: auth.rs  rate_limit.rs
services/gateway/src/routes/: api.rs  auth.rs  banners.rs  billing.rs  github.rs  github_webhook.rs  infrastructure.rs  jira_webhook.rs  log_analyzer.rs  memory.rs  mod.rs  plans.rs  plugins.rs  stripe_webhook.rs  trigger_gate.rs  users.rs
services/worker/: Cargo.toml  Dockerfile
services/worker/src/: main.rs  models.rs
services/worker/src/agent/: anthropic.rs  llm.rs  mcp.rs  mod.rs  provider.rs
services/worker/src/clients/: billing.rs  email.rs  github.rs  mod.rs  repo_snapshot.rs  sandbox.rs
services/worker/src/memory/: embedder.rs  lock.rs  mod.rs  s3_sync.rs
services/worker/src/passes/: ci_fix.rs  feedback.rs  formatter.rs  implement.rs  infra_analyze.rs  mod.rs  onboard.rs  plan.rs  plan_execute.rs  pr.rs  resolve.rs  resume.rs  review.rs  security.rs  syntax_check.rs  test.rs  triage.rs  write_guard.rs
src/app/(docs)/: layout.tsx
src/app/(docs)/docs/: page.tsx
src/app/(legal)/: layout.tsx
src/components/: Footer.tsx  Nav.tsx
