[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Lambda runtime
lambda_http = "0.13"
lambda_runtime = "0.13"
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["set-header"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-sqs = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-sesv2 = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-sts = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-lambda = "1"
aws-smithy-types = "1"

# Auth
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# HTTP client (for GitHub/Jira OAuth)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
subtle = "2"  # constant-time comparison
ulid = "1"
thiserror = "2"
rand = "0.9"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
regex = "1"
