[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Lambda runtime
lambda_runtime = "0.13"
tokio = { version = "1", features = ["full"] }
aws_lambda_events = { version = "0.15", default-features = false, features = ["sqs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-sesv2 = "1"
aws-sdk-lambda = "1"
aws-sdk-sqs = "1"
aws-smithy-types = "1"

# HTTP client (GitHub API, Jira API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Auth
jsonwebtoken = "9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Agent memory
mentedb = { git = "https://github.com/nambok/mentedb.git", branch = "main" }
mentedb-core = { git = "https://github.com/nambok/mentedb.git", branch = "main" }
mentedb-embedding = { git = "https://github.com/nambok/mentedb.git", branch = "main" }
mentedb-extraction = { git = "https://github.com/nambok/mentedb.git", branch = "main" }
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
tar = "0.4"

# Utils
ulid = "1"
thiserror = "2"
base64 = "0.22"
async-trait = "0.1"
rsa = "0.9"
urlencoding = "2"
regex = "1"
